@@ -1,3 +1,8 @@
+2011-01-21	Joel Sherrill <joel.sherrilL@OARcorp.com>
+
+	* posix/src/psignal.c: Back port patch from head to avoid derefencing
+	NULL.
+
 2011-01-19	Joel Sherrill <joel.sherrilL@OARcorp.com>
 
 	* sapi/include/confdefs.h: Account for POSIX threads having a minimum
